cabal-version:      2.4
name:               we-hate-this-game
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             pptx704
maintainer:         rafeedm.bhuiyan@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable we-hate-this-game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Assets, Interactions, Screens, WeHateThisGame, Level6, Level8, Level3, Level5, Level7
    ghc-options: 
            -O2 -Wall
            -threaded
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ==4.14.3.0 || ==4.13.0.0
                    , gloss == 1.13.*
                    , random == 1.2.*
    hs-source-dirs:   app
    default-language: Haskell2010
